# flutter_blue_plus

./: .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  FBP_CONVENTIONS.md  L2CAP_CONSOLIDATE_DART_MESSAGES_TASK.md  L2CAP_CONSOLIDATE_JAVA_CLASSES.md  L2CAP_PR.md  L2CAP_PR_CHANGE_REQUEST.md  L2CAP_REFACTORING_CHECKLIST.md  L2CAP_REFACTORING_CURRENT_STATE.md  L2CAP_REFACTORING_PLAN.md  L2CAP_UPDATED_METHOD_NAMING.md  LICENSE  MIGRATION.md  MOCKING.md  NOTICE.md  README.md  README.md.sb-90a2e24c-GpuPv2  analysis_options.yaml  extra.txt  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  help.yml  question.yml
.github/workflows/: flutter_blue_plus.yml  flutter_blue_plus_android.yml  flutter_blue_plus_darwin.yml  flutter_blue_plus_ios.yml  flutter_blue_plus_linux.yml  flutter_blue_plus_macos.yml  flutter_blue_plus_platform_interface.yml  flutter_blue_plus_web.yml  vx_flutter_blue.yml  vx_flutter_blue_android.yml  vx_flutter_blue_darwin.yml  vx_flutter_blue_linux.yml  vx_flutter_blue_platform_interface.yml  vx_flutter_blue_web.yml
android/: build.gradle
darwin/: flutter_blue_plus_darwin.podspec
example/: pubspec.yaml
example/.openapi-generator/: FILES
ios/: flutter_blue_plus.podspec
lib/: flutter_blue_plus.dart
macos/: flutter_blue_plus.podspec
protos/: flutterblueplus.proto  flutterblueplus.yml  regenerate.md
test/: guid_test.dart
windows/: CMakeLists.txt  flutter_blue_plugin_plugin.cpp  flutter_blue_plus.cpp
windows/include/flutter_blue_plugin/: flutter_blue_plugin.h
windows/include/flutter_blue_plus/: flutter_blue_plus.h
(+179 files in other folders)
